# airflow-slurm

./: .gitignore  .pre-commit-config.yaml  README.md  SLURM_OPTIONS.md  implementaion_log.md  pyproject.toml
.github/workflows/: release.yml
airflow_slurm/: __init__.py  config.py  constants.py  ssh_slurm_operator.py  ssh_slurm_trigger.py  templates.py
src/airflow_slurm/: constants.py  ssh_slurm_operator.py  ssh_slurm_trigger.py  ssh_utils.py
