[project]
name = "airflow-slurm"
version = "0.2.0"
description = "Airflow operator for slurm"
readme = "README.md"
authors = [
    { name = "Andrea Recchia", email = "andrea.recchia@exact-lab.it" },
    { name = "Jacopo Nespolo", email = "jacopo.nespolo@exact-lab.it" }
]
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.3",
    "apache-airflow-providers-ssh>=4.1.1",
    "jinja2>=3.1.6",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
airflow-slurm = "airflow_slurm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "jinja2>=3.1.6",
]
