[tool.poetry]
name = "airflow-slurm"
version = "0.2.0"
description = "Airflow 3 deferrable operator + trigger for SLURM"
authors = ["Andrea Recchia <andrea.recchia@exact-lab.it>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^3"
apache-airflow-providers-ssh = "^4.1.3"
python-dateutil = "^2.9.0.post0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
