[project]
name = "airflow-slurm"
version = "0.2.0"
description = "Airflow operator for slurm"
readme = "README.md"
include = ["src/airflow_slurm/py.typed"]
authors = [
    { name = "Andrea Recchia", email = "andrea.recchia@exact-lab.it" },
    { name = "Jacopo Nespolo", email = "jacopo.nespolo@exact-lab.it" }
]
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.3",
    "apache-airflow-providers-ssh>=4.1.1",
    "asyncssh>=2.21.1",
    "jinja2>=3.1.6",
]

[project.scripts]
airflow-slurm = "airflow_slurm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
]
typing = [
    "ty>=0.0.1a8",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
extend-select = ["ARG001", "I", "RUF059", "D"]
ignore = [
    "D100",  # missing docstring in public module
    "D101",  # missing docstring in public class
    "D103",  # missing docstring in public function
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D101", "D104", "D205", "D212", "D213", "D415"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
testpaths = ["tests/"]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true

[tool.deptry]
exclude = ["tests/", ".venv/"]

[tool.deptry.per_rule_ignores]
DEP002 = ["apache-airflow"]

[tool.bandit]
exclude_dirs = ["tests"]
